# Differ

./: .coverage  .gitignore  CONTRIBUTING.md  Makefile  README.md  coverage.xml  file2.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
gendiff/: __init__.py  differ.py  gendiff.py  generate_differ.py  parse_args.py
gendiff/formaters/: diff_json.py  diff_plain.py  diff_stylish.py
gendiff/scripts/: __init__.py  diff_json.py  diff_plain.py  diff_stylish.py  diff_yaml.py  gen_diff.py  gendiff.py
tests/: test_.py  test_gendiff.py  test_generate_diff.py
